# Bochnia_2014_07

./: .gitignore  README.md
day_01/: demo04.py  demo05.py  demo06.py  demo07.py  demo08.py  demo09.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  demo_00.py  demo_01.py  demo_02.py  ex03.py  ex04.py  ex_01.py  ex_02.py  formatowanie.md  readme.md
day_02/: dm01.py  dm02.py  dm03.py  dm04.py  dm05.py  dm05.txt  dm06.py  dm07.py  dm08.py  dm09.py  dm10.py  dm10a_test.py  dm10b_test.py  dm10c_test.py  dm10d_test.py  dm11.py  dm11a_test.py  ex01.py  ex02.py  ex05.py  ex05a_test.py  ex06.py  ex06a_test.py  ex0X.py
day_03/: dm00.py  dm01.py  dm02.py  dm03.py  dm04.py  dm05.py  dm06.py  dm07.py  dm08.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py
day_04/: .env  dm00.py  dm01.py  dm02.py  dm03.py  dm04.py  dm05.py  dm06.py  dm07.py  dm08.py  dm09.py  pyproject.toml
